--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.agath.eseoapplication">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +28,41 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DisplayMessageActivity" />
+        <activity android:name=".DiceActivity" />
+        <activity
+            android:name=".Des" />
+        <activity
+            android:name=".DisplayConnexionActivity"
+            android:label="@string/title_activity_display_connexion" />
+        <activity
+            android:name=".DisplayCVThequeActivity"
+            android:label="@string/title_activity_display_cvtheque"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DisplayinformationESEOActivity"
+            android:label="@string/title_activity_displayinformation_eseo"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DisplaycoursOptionsActivity"
+            android:label="@string/title_activity_displaycours_options"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".DisplayStageEmploiActivity" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".DisplayStageEmploiMap"
+            android:label="@string/title_activity_display_stage_emploi_map"></activity>
     </application>
 
 </manifest>
